# FigForge

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/: quickstart.py
figforge/: __init__.py  assets.py  cli.py  effects.py  forensics.py  lint.py  render.py
skills/figma-to-email-html/: SKILL.md
skills/figma-to-email-html/assets/: email-skeleton.html
skills/figma-to-email-html/references/: email-css-matrix.md  figforge-cli.md  pipeline.md
skills/figma-to-email-html/scripts/: verify.py
tests/: conftest.py  test_forensics.py  test_lint.py
