[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "figforge"
version = "0.1.0"
description = "Turn Figma SVG exports into email-safe, pixel-faithful HTML assets: SVG forensics, asset extraction, effect baking, render+diff verification, and an email-robustness linter."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Azal Daniel" }]
keywords = ["figma", "email", "html-email", "svg", "newsletter", "engagebay", "outlook", "gmail", "pillow"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Communications :: Email",
  "Operating System :: OS Independent",
]
dependencies = ["Pillow>=10", "numpy>=1.24"]

# cairosvg / weasyprint / pymupdf need system libs (libcairo, libpango) that pip
# can't install — see the README. Install with: pip install "figforge[render]"
[project.optional-dependencies]
render = ["cairosvg>=2.7", "weasyprint>=60", "pymupdf>=1.23"]
dev = ["pytest>=8", "pytest-cov", "ruff>=0.6", "mypy>=1.8", "build", "pre-commit"]

[project.urls]
Homepage = "https://github.com/AzalDaniel/FigForge"
Documentation = "https://github.com/AzalDaniel/FigForge#readme"
Repository = "https://github.com/AzalDaniel/FigForge"
Issues = "https://github.com/AzalDaniel/FigForge/issues"
Changelog = "https://github.com/AzalDaniel/FigForge/blob/main/CHANGELOG.md"

[project.scripts]
figforge = "figforge.cli:main"

[tool.setuptools]
packages = ["figforge"]

[tool.setuptools.package-data]
figforge = ["py.typed"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]     # long inline SVG/HTML fixtures are fine in tests
"examples/*" = ["E501"]  # illustrative one-liners

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
